Adicionei mais uma linha

--- a/Site_exemplo/index.html
+++ b/Site_exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, rerum soluta? Quisquam, eos minus at sunt esse incidunt maiores, dolore dolores fuga, modi enim? Dolore corrupti ea fugiat exercitationem facilis!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, rerum soluta? Quisquam, eos minus at sunt esse incidunt maiores, dolore dolores fuga, modi enim? Dolore corrupti ea fugiat exercitationem facilis!</p>
 </body>
 </html>
